[package]
name = "key-store"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[lib]
path = "src/key-store.rs"

[dependencies]
log = "0.4"
zeroize = { version = "1.3", features = ["zeroize_derive"] }
rand = "0.8"
# Used for the builtin sqlite key store if enabled
rusqlite = { version = "0.25", optional = true }
# The default crypto provider used for the builtin sqlite key store if enabled
evercrypt = { version = "0.0.9", optional = true }
# The default HPKE implementation used for the builtin sqlite key store if enabled
hpke = { version = "0.0.8", package = "hpke-rs", optional = true, features = ["hazmat"] }

[dev-dependencies]
pretty_env_logger = "0.4"
digest = "0.9"
sha2 = "0.9"

[features]
default = []
random = [] # Enable functions that require randomness such as key generation
hazmat = [] # ☣️ enable unsafe features
sqlite-backend = ["rusqlite", "evercrypt-backend"] # enable the builtin sqlite key store
evercrypt-backend = ["evercrypt", "hpke"]
