[package]
name = "key_store"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"

[lib]
path = "src/key-store.rs"

[dependencies]
log = "0.4"
zeroize = { version = "1.3", features = ["zeroize_derive"] }
rand = "0.8"
crypto_algorithms = { version = "0.1", git = "https://github.com/franziskuskiefer/algorithm-identifiers-rs.git", branch = "main", features = ["serialization"]}
# Serialization
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tls_codec = { version = "0.1", git = "https://github.com/openmls/tls-codec.git", branch = "main", features = ["derive"] }

[dev-dependencies]
pretty_env_logger = "0.4"

[patch.'https://github.com/openmls/tls-codec.git']
tls_codec = { path = "../tls-codec/tls_codec" }

[features]
default = []
random = [] # Enable functions that require randomness such as key generation
hazmat = [] # ☣️ enable unsafe features
serialization = ["serde", "serde_json", "tls_codec/serde_serialize"]
